# up-skill

./: .gitignore  AGENTS.md  INSTALL.md  README.md  SKILL.md  install.sh  main.py  pyproject.toml  requirements.txt
.claude-plugin/: marketplace.json  plugin.json
docs/: TODO.md
prompts/: brand_guardrails_analyzer.md  brand_guardrails_builder.md  content_brain_analyzer.md  content_brain_builder.md  correction_handler.md  intake.md  merger.md  persona_analyzer.md  persona_builder.md  production_style_analyzer.md  production_style_builder.md
skills/delete-up/: SKILL.md
skills/list-ups/: SKILL.md
skills/up-skill/: SKILL.md
skills/update-up/: SKILL.md
tests/: test_asr_engine.py  test_cache_manager.py  test_collector.py  test_incremental.py  test_install.py  test_management_skills.py  test_material_check.py  test_pipeline.py  test_plugin_structure.py  test_skill_structure.py  test_skill_writer.py  test_subcommands.py  test_subtitle_parser.py  test_text_cleaner.py
tools/: asr_engine.py  cache_manager.py  collector.py  incremental.py  install_helper.py  material_check.py  skill_writer.py  subtitle_parser.py  text_cleaner.py
tools/transcribe_kit/: __init__.py  app.py  download.py
