[project]
name = "up-skill"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "faster-whisper>=1.1.0",
    "mlx-whisper",
    "openai-whisper>=20250625",
    "pypinyin>=0.55.0",
    "yt-dlp>=2026.3.17",
]

[project.optional-dependencies]
cohere-asr = [
    "transformers>=5.4.0",
    "torch",
    "accelerate",
    "soundfile",
    "librosa",
    "sentencepiece",
    "protobuf",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
